k8s/argocdapps/photoprism/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        app: photoprism
        app.kubernetes.io/name: photoprism
    name: photoprism
    namespace: photoprism
spec:
    replicas: 1
    selector:
        matchLabels:
            app: photoprism
            app.kubernetes.io/name: photoprism
    serviceName: photoprism
    template:
        metadata:
            labels:
                app: photoprism
                app.kubernetes.io/name: photoprism
        spec:
            containers:
                - env:
                    - name: PHOTOPRISM_ORIGINALS_LIMIT
                      value: "-1"
                    - name: PHOTOPRISM_DETECT_NSFW
                      value: "true"
                    - name: PHOTOPRISM_DATABASE_DRIVER
                      value: mysql
                    - name: PHOTOPRISM_HTTP_HOST
                      value: 0.0.0.0
                    - name: PHOTOPRISM_HTTP_PORT
                      value: "2342"
                    - name: PHOTOPRISM_ADMIN_USER
                      value: photoprism
                    - name: PHOTOPRISM_SITE_URL
                      value: https://photoprism.walnuts.dev/
                    - name: PHOTOPRISM_DISABLE_TLS
                      value: "true"
                  image: photoprism/photoprism:240915
                  name: photoprism
                  ports:
                    - containerPort: 2342
                      name: http
                  readinessProbe:
                    httpGet:
                        path: /api/v1/status
                        port: http
                  resources:
                    limits:
                        cpu: "2"
                        memory: 4Gi
                    requests:
                        cpu: "0"
                        memory: 2Gi
                  securityContext:
                    readOnlyRootFilesystem: true
                    seccompProfile:
                        type: RuntimeDefault
                  volumeMounts:
                    - mountPath: /photoprism/originals
                      name: originals
                    - mountPath: /photoprism/import
                      name: import
                    - mountPath: /photoprism/storage
                      name: storage
                    - mountPath: /photoprism/storage/cache
                      name: cache
                    - mountPath: /tmp
                      name: tmp
            nodeSelector:
                kubernetes.io/hostname: cake
            volumes:
                - hostPath:
                    path: /mnt/data/share/CameraRoll
                    type: Directory
                  name: originals
                - name: import
                  persistentVolumeClaim:
                    claimName: photoprism-import
                - name: cache
                  persistentVolumeClaim:
                    claimName: photoprism-cache
                - name: storage
                  persistentVolumeClaim:
                    claimName: photoprism-storage
                - emptyDir: {}
                  name: tmp

---
